# api

./: .gitignore  README.md  pyproject.toml
src/api/: __init__.py  __main__.py  config.py
src/api/barcode/: __init__.py  barcode.py  models.py
